5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1800_2565.log
== TEST (2019-06-06 11:22:57) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(3/4)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] > f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:24:13) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] > f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:24:34) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] > f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(x)
-- EXECUTION TIME:
1.06265
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[1 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[4 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[4 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:25:16) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] > f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:25:49) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] => f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- EXECUTION TIME:
0.771398
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 10
    if((v1[i] >= 5) and (v2[i] => f)):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:25:55) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] => f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- EXECUTION TIME:
0.552582
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 10
    if((v1[i] >= 5) and (v2[i] => f)):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:25:57) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] => f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- ERROR:
File "XXXX", line 10
    if((v1[i] >= 5) and (v2[i] => f)):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:26:05) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] => f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- EXECUTION TIME:
1.66025
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 10
    if((v1[i] >= 5) and (v2[i] => f)):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:26:06) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] => f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- EXECUTION TIME:
3.96231
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1800/2565/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:26:08) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] => f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- EXECUTION TIME:
5.55057
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 10
    if((v1[i] >= 5) and (v2[i] => f)):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:26:08) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] => f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- EXECUTION TIME:
5.71039
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 10
    if((v1[i] >= 5) and (v2[i] => f)):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:26:08) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] => f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- EXECUTION TIME:
4.82919
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 10
    if((v1[i] >= 5) and (v2[i] => f)):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:26:08) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] => f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- EXECUTION TIME:
6.85057
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 10
    if((v1[i] >= 5) and (v2[i] => f)):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:26:09) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] >= f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:26:10) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] >= f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(f)
-- EXECUTION TIME:
4.13824
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1800/2565/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:26:35) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] >= f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(x)
-- EXECUTION TIME:
0.999597
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
Insira as medias finais: Insira a frequencia: Insira a carga horaria: [2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
Insira as medias finais: Insira a frequencia: Insira a carga horaria: [5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
Insira as medias finais: Insira a frequencia: Insira a carga horaria: [5 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:26:36) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] >= f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:26:53) 
-- CODE:
from numpy import *

v1 = array(eval(input("Insira as medias finais: ")))
v2 = array(eval(input("Insira a frequencia: ")))
v3 = int(input("Insira a carga horaria: "))

x = zeros(3,dtype=int)
f = v3*(0.75)
for i in range(size(v1)):
	if((v1[i] >= 5) and (v2[i] >= f)):
		x[0] = x[0] + 1
	elif((v1[i] < 5) and (v2[i] >= f)):
		x[1] = x[1] + 1
	elif((v1[i] >= 5) and (v2[i] < f)):
		x[2] = x[2] + 1
print(x)
-- EXECUTION TIME:
1.21431
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
